# Dynamic_Agent

./: .gitignore  CLAUDE.md  coreComponentSpec.md  log.md  pyproject.toml  systemdesign.md  technicalSpecv1.md
src/unifiedcli/: __init__.py  cli.py  skills-lock.json
src/unifiedcli/.agents/skills/browser-use/: SKILL.md
src/unifiedcli/adapters/: __init__.py  interface.py  loader.py  registry.py  vault.py
src/unifiedcli/agents/: __init__.py  base.py  main_agent.py  runtime.py  skills.py
src/unifiedcli/configs/: workspace.json
src/unifiedcli/council/: __init__.py  council.py  protocol.py  providers.py
src/unifiedcli/decisions/: __init__.py  gate.py  triggers.py
src/unifiedcli/graph/: __init__.py  engine.py  serialization.py  validators.py
src/unifiedcli/memory/: __init__.py  private.py  scratchpad.py  shared.py
src/unifiedcli/models/: __init__.py  adapter.py  agent.py  council.py  decision.py  memory.py  project.py  task.py  workspace.py
src/unifiedcli/scheduler/: __init__.py  matching.py  priority.py  scheduler.py
src/unifiedcli/workspace/: __init__.py  initializer.py  project.py  workspace.py
tests/: conftest.py
tests/test_adapters/: test_registry.py  test_vault.py
tests/test_council/: test_council.py
tests/test_decisions/: test_triggers.py
tests/test_graph/: test_engine.py  test_serialization.py
tests/test_memory/: test_private.py  test_scratchpad.py  test_shared.py
tests/test_scheduler/: test_agent_skills.py  test_matching.py  test_priority.py  test_scheduler.py
tests/test_workspace/: test_workspace.py
